--- a/_includes/monaco.html
+++ b/_includes/monaco.html
@@ -16,7 +16,7 @@
           const height = pre.offsetHeight;
 
           const monacoContainer = document.createElement('div');
-          monacoContainer.setAttribute('style', `position: relative; width: 100%; height: ${height}px; padding 1rem 0; margin: 2rem 0;`);
+          monacoContainer.setAttribute('style', `position: relative; width: 100%; height: ${height}px; padding 5px 0; margin: 10px 0;`);
 
           const monacoEditor = document.createElement('div');
           monacoEditor.setAttribute('style', `width: 100%; height: 100%;`);
