--- a/_includes/monaco.html
+++ b/_includes/monaco.html
@@ -37,15 +37,7 @@
             fontSize: 16,
           });
 
-          // Add some buttons to the editor
-          const buttons = document.createElement('div');
-          buttons.setAttribute('style', 'position: absolute; top: 0; right: 0; padding: 5px;');
-          buttons.innerHTML = `
-            <button onclick="editor.getAction('editor.action.formatDocument').run()">Format</button>
-            <button onclick="editor.getAction('editor.action.commentLine').run()">Comment</button>
-            <button onclick="editor.getAction('editor.action.formatDocument').run()">Run</button>
-          `;
-          monacoContainer.appendChild(buttons);
+          console.dir(editor, { depth: null });
 
           // Listen for changes in the editor content
           editor.onDidChangeModelContent((event) => {
