--- a/_sass/_main.sass
+++ b/_sass/_main.sass
@@ -119,3 +119,7 @@ footer
 
 code
   color: #d73a49
+
+/* Hide the keyboard (accessibility) button in Monaco Editor */
+.monaco-editor .monaco-editor-overlaymessage .codicon-keyboard
+  display: none !important
