--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -75,7 +75,7 @@
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
     crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/pyodide/v0.25.0/full/pyodide.js"></script>
-  {% include monaco.html %}
+  <script src="{{ 'assets/js/monaco-init.js' | relative_url }}"></script>
   <script src="{{ 'assets/js/main.js' | relative_url }}"></script>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4967292172494506"
     crossorigin="anonymous"></script>
