--- a/_sass/_main.sass
+++ b/_sass/_main.sass
@@ -118,7 +118,7 @@ footer
   justify-content: space-between
 
 code
-  color: #d73a49
+  color: #d73a49 !important
 
 /* Hide the keyboard (accessibility) button in Monaco Editor */
 .monaco-editor .monaco-editor-overlaymessage .codicon-keyboard
