--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,6 +55,7 @@
         <script>
           (adsbygoogle = window.adsbygoogle || []).push({});
         </script>
+        {% include comments.html %}
       </main>
     </div>
   </div>
@@ -74,7 +75,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
     crossorigin="anonymous"></script>
-  <!-- <script src="https://cdn.jsdelivr.net/pyodide/v0.25.0/full/pyodide.js"></script> -->
+  <script id="dsq-count-scr" src="//pythonzartoshtdev.disqus.com/count.js" async></script>
   <script src="{{ 'assets/js/monaco-init.js' | relative_url }}"></script>
   <script src="{{ 'assets/js/main.js' | relative_url }}"></script>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4967292172494506"
